fixed coin image positioning on smaller screen size

--- a/pages/coin/Coin.module.css
+++ b/pages/coin/Coin.module.css
@@ -18,6 +18,7 @@
   
   .coin_image {
     margin-bottom: 1rem;
+    margin-top: 10rem;
   }
   
   .coin_name {
